--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,11 @@
 }
 
 .navbar{
-  background-color: black;
+  background-color: #E32722;
   color: white;
-  height: 50px;
+  height: 120px;
   font-size: 40px;
+  box-shadow: 1px 10px 15px 10px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
 }
 
 .App-logo {
