--- a/src/components/pokemon-resume/pokemon-resume.css
+++ b/src/components/pokemon-resume/pokemon-resume.css
@@ -11,6 +11,12 @@
     text-align: left;
 }
 
+.li {
+    text-decoration: none;
+    color: black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .poke-name {
     display: flex;
     justify-content: space-around;
